--- a/snippets/simple-batching.html
+++ b/snippets/simple-batching.html
@@ -2,7 +2,20 @@
   <body>
     <h1>Simple batching class</h1>
     <h2>Open your console 😉</h2>
-    <script type="module" src="./simple-batching.js">
+    <script type="module">
+      import { Batching } from './simple-batching.js';
+
+      /* We instantiate a new instance of our class */
+      const batching = new Batching();
+
+      /* And we set multiple properties */
+      batching.a = 1;
+      batching.b = 2;
+
+      /**
+      * 🎉 The result:
+      * "updating!" is only logged to the console once because of the batching!
+      */
     </script>
   </body>
 </html>
