--- a/snippets/simple-batching-update-complete.html
+++ b/snippets/simple-batching-update-complete.html
@@ -2,7 +2,29 @@
   <body>
     <h1>Simple batching class with an <code>updateComplete</code> property</h1>
     <h2>Open your console 😉</h2>
-    <script type="module" src="./simple-batching-update-complete.js">
+    <script type="module">
+      import { Batching } from './simple-batching-update-complete.js';
+
+      /* We use an IIFE (Immediately Invoked Function Expression), because top-level await is not a thing yet 😑 */
+      (async () => {
+        /* We instantiate a new instance of our class */
+        const batching = new Batching();
+
+        /* Set multiple properties in a row */
+        batching.a = 1;
+        batching.b = 2;
+
+        /* And this is where we `await` an update */
+        await batching.updateComplete;
+
+        /* We then assign another property */
+        batching.b = 3;
+
+        /**
+         * 🎉 The result:
+         * "updating!" is logged to the console twice!
+         */
+      })();
     </script>
   </body>
 </html>
