chore: add title

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <h1>Title</h1>
+    <h1>LitElement: A Deepdive Into Batched Updates</h1>
     <nav>
       <ul>
         <li><a href="./snippets/simple-batching.html">Simple batching</a></li>
